fix some alignment errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body{
     display:block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 15px;
  }   
 
 .logo{
@@ -50,9 +51,10 @@ a:link{
 a:visited{
     color:#2F4858;
 }
-a:hover{
+a:hover, a:active{
     text-decoration: underline;
 }
+
 ul li{
     padding-right:15px;
 }
